Product Page Update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="photo-grid">
-                <div class="card card-wide"><img src="Images/candle.webp" fetchpriority="high"></div>
+                <div class="card card-wide"><img src="Images/all_candles.jpg" fetchpriority="high"></div>
                 <div class="card card-tall"><img src="Images/mediamanager-transformed.webp" fetchpriority="high"></div>
                 <div class="card card-square"><img src="Images/gusfring.webp" fetchpriority="high"></div>
                 <div class="card card-square" ><img src="Images/ramsay.webp" fetchpriority="high"></div>
