--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,16 @@
                 <a href="index.html">HOME</a>
             </div>
             <div id="text_item">
+                <a href="">ABOUT</a>
+            </div>
+            <div id="text_item">
                 <a href="product_page.html">CANDLES</a>
+            </div>
+            <div id="text_item">
+                <a href="">ORDER</a>
+            </div>
+            <div id="text_item">
+                <a href="">CONTACT</a>
             </div>
         </div>
     </main>
