--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="index.html" id="websiteHome">HOME</a></li>
+                    <li><a href="" id="websiteAbout">ABOUT</a></li>
                     <li><a href="product_page.html" id="websiteProducts">CANDLES</a></li>
+                    <li><a href="" id="websiteOrder">ORDER</a></li>
+                    <li><a href="" id="websiteContact">CONTACT</a></li>
                 </ul>
             </nav>
             
             <section class="media_links">
                 <a href="https://www.tiktok.com/@scents_and_sounds"><img id="tiktok1" src="Images/tik-tok.png" alt="Tiktok logo" fetchpriority="high"></a>
                 <a href="https://www.instagram.com/scents_and_sounds_/"><img id="instagram1" src="Images/instagram.png" alt="Instagram logo" fetchpriority="high"></a>
+                <a href=""><img id="facebook1" src="Images/facebook.png" alt="Facebook Page" fetchpriority="high"></a>
+                <a href=""><img id="twitter1" src="Images/twitter.png" alt="Facebook Page" fetchpriority="high"></a>
                 <a href="menu.html"><img id="menuBar" src="Images/menu-bar.png" fetchpriority="high"></a>
             </section>
             
@@ -36,17 +41,8 @@
         <main>
 
             <div class="bannerContainer">
-                <h2 id="welcomeTag">
-                    Welcome To
-                </h2>
+                <img src="Images/all_candles.jpg" fetchpriority="high">
 
-                <section class="bigText">
-                    <h1>Illumina</h1>
-
-                    <h2 id="webTag">
-                        Scents & Sounds
-                    </h2>
-                </section>
             </div>
 
             <div class="purchaseButton">
@@ -160,14 +156,22 @@
                 <a href="https://www.instagram.com/scents_and_sounds_/" target="_blank" title="Our Illumina Instagram Page">
                     <img id="instagram" src="Images/instagram.png" alt="Instagram logo" fetchpriority="low">
                 </a>
+
+                <a href="" target="_blank" title="Our Illumina Facebook Page">
+                    <img id="facebook" src="Images/facebook.png" alt="Facebook logo" fetchpriority="low">
+                </a>
+
+                <a href="" target="_blank" title="Our Illumina Facebook Page">
+                    <img id="twitter" src="Images/twitter.png" alt="twitter logo" fetchpriority="low">
+                </a>
             </section>
 
             <br>
 
-            <p class="footerText">Contact: someone@gmail.com</p>
+            <p class="footerText">Contact: info@illuminacandles.co.uk</p>
 
             <div id="footerCopyright">
-                Copyrights &copy; 2024 All rights reserved
+                copyright &copy; 2024 All rights reserved
             </div>
         </footer>
     </body>
