--- a/product_page.html
+++ b/product_page.html
@@ -10,14 +10,14 @@
     </head>
     <body>
         <header id="mainHeader">
-            <h3 id="websiteTitle">Illumina Scents & Sounds</h3>
+            <img id="websiteImageLogo" src="Images/new_logo.png" alt="websiteLogo" fetchpriority="high">
 
             <nav>
                 <ul class="nav_links">
                     <li><a href="index.html" id="websiteHome">HOME</a></li>
                     <li><a href="" id="websiteAbout">ABOUT</a></li>
-                    <li><a href="" id="websiteOrder">ORDER</a></li>
-                    <li><a href="" id="websiteContact">CONTACT</a></li>
+                    <li><a href="https://forms.gle/Vr8hQMgjxFLA77xe7" target="_blank" id="websiteOrder">ORDER</a></li>
+                    <li><a href="contact.html" id="websiteContact">CONTACT</a></li>
                 </ul>
             </nav>
             
@@ -25,7 +25,7 @@
                 <a href="https://www.tiktok.com/@scents_and_sounds"><img id="tiktok1" src="Images/tik-tok.png"></a>
                 <a href="https://www.instagram.com/scents_and_sounds_/"><img id="instagram1" src="Images/instagram.png"></a>
                 <a href=""><img id="facebook1" src="Images/facebook.png" alt="Facebook Page" fetchpriority="high"></a>
-                <a href=""><img id="twitter1" src="Images/twitter.png" alt="Facebook Page" fetchpriority="high"></a>
+                <a href="https://twitter.com/IlluminaCandles"><img id="twitter1" src="Images/twitter.png" alt="Facebook Page" fetchpriority="high"></a>
                 <a href="menu.html"><img id="menuBar" src="Images/menu-bar.png"></a>
             </section>
         </header>
@@ -130,7 +130,7 @@
                     <img id="facebook" src="Images/facebook.png" alt="Facebook logo" fetchpriority="low">
                 </a>
 
-                <a href="" target="_blank" title="Our Illumina Facebook Page">
+                <a href="https://twitter.com/IlluminaCandles" target="_blank" title="Our Illumina Facebook Page">
                     <img id="twitter" src="Images/twitter.png" alt="twitter logo" fetchpriority="low">
                 </a>
             </section>
