--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
                 <a href="index.html">HOME</a>
             </div>
             <div id="text_item">
-                <a href="">ABOUT</a>
+                <a href="about_us.html">ABOUT</a>
             </div>
             <div id="text_item">
                 <a href="product_page.html">CANDLES</a>
@@ -28,7 +28,7 @@
                 <a href="">ORDER</a>
             </div>
             <div id="text_item">
-                <a href="">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
             </div>
         </div>
     </main>
