Website accessibility optimisation 1

--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Navigation section to access other sections of the Illumina Scents & Sounds website." content="width=device-width, initial-scale=1.0">
 
     <link rel="preload" href="Stylesheets/menu_style.css" as="style">
     <link rel="stylesheet" href="Stylesheets/menu_style.css">
