--- a/product_page.html
+++ b/product_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="All the products of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1.0">
         <title>Products | Illumina Scents & Sounds</title>
 
         <link rel="preload" href="Stylesheets/index.css" as="style">
@@ -22,11 +22,11 @@
             </nav>
             
             <section class="media_links">
-                <a href="https://www.tiktok.com/@scents_and_sounds"><img id="tiktok1" src="Images/tik-tok.png"></a>
-                <a href="https://www.instagram.com/scents_and_sounds_/"><img id="instagram1" src="Images/instagram.png"></a>
-                <a href=""><img id="facebook1" src="Images/facebook.png" alt="Facebook Page" fetchpriority="high"></a>
-                <a href="https://twitter.com/IlluminaCandles"><img id="twitter1" src="Images/twitter.png" alt="Facebook Page" fetchpriority="high"></a>
-                <a href="menu.html"><img id="menuBar" src="Images/menu-bar.png"></a>
+                <a href="https://www.tiktok.com/@scents_and_sounds" aria-label="Check out our tiktok page" target="_blank"><img id="tiktok1" src="Images/tik-tok.png" alt="Clickable Tiktok Logo to navigate to Tiktok logo" fetchpriority="high"></a>
+                <a href="https://www.instagram.com/scents_and_sounds_/" aria-label="Check out our instagram page" target="_blank"><img id="instagram1" src="Images/instagram.png" alt="Clickable Instagram Logo to navigate to Instagram logo" fetchpriority="high"></a>
+                <a href="https://www.facebook.com/profile.php?id=61556461760346" aria-label="Check out our facebook page" target="_blank"><img id="facebook1" src="Images/facebook.png" alt="Clickable Facebook Logo to navigate to Facebook Page" fetchpriority="high"></a>
+                <a href="https://twitter.com/IlluminaCandles" aria-label="Check out our twitter page" target="_blank"><img id="twitter1" src="Images/twitter.png" alt="Clickable Twitter Logo to navigate to Twitter Page" fetchpriority="high"></a>
+                <a href="menu.html" aria-label="Navigation section to go to other sections"><img id="menuBar" src="Images/menu-bar.png" alt="Clickable Menu Bar Logo to navigate to other pages" fetchpriority="high"></a>
             </section>
         </header>
 
