--- a/product_page.html
+++ b/product_page.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <header id="mainHeader">
-            <img id="websiteImageLogo" src="Images/new_logo.png" alt="websiteLogo" fetchpriority="high">
+            <a href="index.html"><img id="websiteImageLogo" src="Images/new_logo.png" alt="websiteLogo" fetchpriority="high"></a>
 
             <nav>
                 <ul class="nav_links">
                     <li><a href="index.html" id="websiteHome">HOME</a></li>
                     <li><a href="about_us.html" id="websiteAbout">ABOUT</a></li>
-                    <li><a href="https://forms.gle/Vr8hQMgjxFLA77xe7" target="_blank" id="websiteOrder">ORDER</a></li>
+                    <li><a href="" id="websiteOrder">ORDER</a></li>
                     <li><a href="contact.html" id="websiteContact">CONTACT</a></li>
                 </ul>
             </nav>
