--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html" id="websiteHome">HOME</a></li>
                     <li><a href="about_us.html" id="websiteAbout">ABOUT</a></li>
                     <li><a href="product_page.html" id="websiteProducts">CANDLES</a></li>
-                    <li><a href="https://forms.gle/Vr8hQMgjxFLA77xe7" target="_blank" id="websiteOrder">ORDER</a></li>
+                    <li><a href="" id="websiteOrder">ORDER</a></li>
                     <li><a href="contact.html" id="websiteContact">CONTACT</a></li>
                 </ul>
             </nav>
@@ -105,7 +105,12 @@
                 <div class="block" id="environmentBlock">
                     <section>
                         <p class="mainText" id="environmentText">
-                            As stewards of both creativity and nature, we are committed to sustainability. Our candles are crafted with eco-friendly practices, using responsibly sourced materials. We believe in leaving a 
+                            Made from 100% vegan, cruelty-free soy wax, our candles ensure a cleaner burn than traditional paraffin wax candles, reducing our carbon footprint. Infused with natural essential oils, our candles provide a fragrant and eco-friendly alternative to synthetic oils: we are committed to using only plant-based scents.
+                            Our sustainable commitment also extends to our packaging, crafted from recycled materials and fully recyclable, minimising landfill impact.
+                        </p>
+
+                        <p class="mainText" id="environmentText">
+                            Our candles are crafted with eco-friendly practices, using responsibly sourced materials. We believe in leaving a 
                             positive impact on the environment, so you can enjoy our candles with the peace of mind that comes from supporting a brand that cares.
                         </p>
                         
