--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="icon" type="image/webp" href="Images/logo.webp">
         <title>Illumina Scents & Sounds</title>
-        <meta name="Main website of the Illumina Scents & Sounds company." content="width=device-width initial-scale=1.0">
+        <meta name="Main website of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
 
         <link rel="preload" href="Stylesheets/index.css" as="style">
         <link rel="stylesheet" href="Stylesheets/index.css">
