--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" id="websiteHome">HOME</a></li>
                 <li><a href="about_us.html" id="websiteAbout">ABOUT</a></li>
                 <li><a href="product_page.html" id="websiteProducts">CANDLES</a></li>
-                <li><a href="" id="websiteOrder">ORDER</a></li>
+                <li><a href="https://www.ye-tradingstation.org.uk/company/13995" target="_blank" id="websiteOrder">ORDER</a></li>
             </ul>
         </nav>
 
