--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
                 <a href="product_page.html">CANDLES</a>
             </div>
             <div id="text_item">
-                <a href="">ORDER</a>
+                <a href="https://www.ye-tradingstation.org.uk/company/13995" target="_blank">ORDER</a>
             </div>
             <div id="text_item">
                 <a href="contact.html">CONTACT</a>
