--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 
             <nav>
                 <ul class="nav_links">
-                    <li><a href="index.html" id="websiteHome">HOME</a></li>
                     <li><a href="about_us.html" id="websiteAbout">ABOUT</a></li>
                     <li><a href="product_page.html" id="websiteProducts">CANDLES</a></li>
-                    <li><a href="" id="websiteOrder">ORDER</a></li>
+                    <li><a href="https://www.ye-tradingstation.org.uk/company/13995" target="_blank" id="websiteOrder">ORDER</a></li>
                     <li><a href="contact.html" id="websiteContact">CONTACT</a></li>
                 </ul>
             </nav>
