improved images + page views

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" type="image/webp" href="Images/logo.webp">
+        <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
         <title>Illumina Scents & Sounds</title>
         <meta name="Main website of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
 
@@ -74,10 +74,11 @@
 
             <div class="scroller">
                 <ul class="tag-list inner_scroller">
-                    <img src="Images/candle_cheers.jpg" alt="Image of multiple people holding different candles">
-                    <img src="Images/candle_cheers_label.jpg" alt="Image of 2 people holding a calm candle">
-                    <img src="Images/discussion.webp" alt="Image of an Illumina Scents & Sounds meeting">
-                    <img src="Images/ramsay.webp" alt="Image of gordon ramsay">
+                    <img src="Images/candle_cheers.jpg" alt="Image of multiple people holding different candles" loading="lazy" fetchpriority="low">
+                    <img src="Images/candle_cheers_label.jpg" alt="Image of 2 people holding a calm candle" loading="lazy" fetchpriority="low">
+                    <img src="Images/focus_student.jpg" alt="Image of a student studying with a focus candle next to them" loading="lazy" fetchpriority="low">
+                    <img src="Images/energise_shoes.jpg" alt="Image of a person getting ready to go on a run with the energise candle" loading="lazy" fetchpriority="low">
+                    <img src="Images/calm_meditation.jpg" alt="Image of a person meditating with the calm candle" loading="lazy" fetchpriority="low">
                 </ul>
             </div>
 
@@ -138,6 +139,8 @@
             <div id="footerCopyright">
                 copyright &copy; 2024 All rights reserved
             </div>
+
+            <script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"210663f301526a918c74337722f88d0d"})});</script>
         </footer>
     </body>
 </html>
