fixed about section

--- a/about_us.html
+++ b/about_us.html
@@ -85,17 +85,30 @@
                     that embody sophistication, style, and serenity.
                 </p>
             </section>
-
-            <img src="Images/discussion.webp">
         </section>
 
         <br>
 
-        <div class="photo-grid">
-            <div class="card card-wide"><img src="Images/all_candles.jpg" fetchpriority="high"></div>
-            <div class="card card-tall"><img src="Images/nostalgic_candlegif.gif" fetchpriority="high"></div>
-            <div class="card card-square"><img src="Images/gusfring.webp" fetchpriority="high"></div>
-            <div class="card card-square" ><img src="Images/ramsay.webp" fetchpriority="high"></div>
+        <div class="about_grid_container">
+            <div class="grid-item grid-item-1">
+                <img src="Images/meeting.webp" alt="Image of a company meeting" loading="lazy" fetchpriority="low">
+            </div>
+
+            <div class="grid-item grid-item-2">
+                <img src="Images/mediamanager.webp" alt="Image of both the media manager and the CEO" loading="lazy" fetchpriority="low">
+            </div>
+
+            <div class="grid-item grid-item-3">
+                <img src="Images/discussion.webp" alt="Image of a company discussion" loading="lazy" fetchpriority="low">
+            </div>
+
+            <div class="grid-item grid-item-4">
+                <img src="Images/max-saulgoodman-transformed.png" alt="Image of the company CEO" loading="lazy" fetchpriority="low">
+            </div>
+
+            <div class="grid-item grid-item-5">
+                <img src="Images/all_candles.jpg" alt="Image of all the Illumina Scents & Sounds products" loading="lazy" fetchpriority="low">
+            </div>
         </div>
 
     </main>
