--- a/product_page.html
+++ b/product_page.html
@@ -35,7 +35,7 @@
             <div class="productCardContainer">
                 <div class="productCard">
                     <div class="productCardImage">
-                        <img src="Images/nostalgia_candle.jpg">
+                        <img src="Images/nostalgia_candle.jpg" alt="Image of the nostalgia candle">
                     </div>
 
                     <div class="productCardText">
@@ -53,7 +53,7 @@
 
                 <div class="productCard">
                     <div class="productCardImage">
-                        <img src="Images/joy_candle.jpg">
+                        <img src="Images/joy_candle.jpg" alt="Image of the Joy candle">
                     </div>
 
                     <div class="productCardText">
@@ -71,7 +71,7 @@
 
                 <div class="productCard">
                     <div class="productCardImage">
-                        <img src="Images/focus_candle.jpg">
+                        <img src="Images/focus_candle.jpg" alt="Image of the focus candle">
                     </div>
 
                     <div class="productCardText">
@@ -89,7 +89,7 @@
 
                 <div class="productCard">
                     <div class="productCardImage">
-                        <img src="Images/calm_candle.jpg">
+                        <img src="Images/calm_candle.jpg" alt="Image of the calm candle">
                     </div>
 
                     <div class="productCardText">
@@ -107,7 +107,7 @@
 
                 <div class="productCard">
                     <div class="productCardImage">
-                        <img src="Images/energise_candle.jpg">
+                        <img src="Images/energise_candle.jpg" alt="Image of the energise candle">
                     </div>
 
                     <div class="productCardText">
