meta description test

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="The contact section of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contact us using the contact email if you have any queries.">
     <title>Contact | Illumina Scents & Sounds</title>
 
     <link rel="preload" href="Stylesheets/index.css" as="style">
