--- a/product_page.html
+++ b/product_page.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="All the products of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Check out our various Illumina candles, each based around a specific mood with a matching spotify playlist.">
         <title>Products | Illumina Scents & Sounds</title>
 
         <link rel="preload" href="Stylesheets/index.css" as="style">
