meta description test 2

--- a/about_us.html
+++ b/about_us.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Our story began with a shared passion for creating moments of warmth and tranquility, and it evolved into the creation of candles that captivate the senses and elevate the ambiance of any space.">
     <meta name="About the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
     <title>About Us | Illumina Scents & Sounds</title>
 
