--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
         <title>Illumina Scents & Sounds</title>
+        <meta name="description" content="At Illumina, we believe in the transformative power of light and fragrance. Each illumina candle is meticulously handcrafted using premium natural soy wax and carefully selected fragance oils.">
         <meta name="Main website of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
 
         <link rel="preload" href="Stylesheets/index.css" as="style">
