new error 404 page

--- a/about_us.html
+++ b/about_us.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
     <meta charset="UTF-8">
+    <title>About Us | Illumina Scents & Sounds</title>
     <meta name="description" content="Our story began with a shared passion for creating moments of warmth and tranquility, and it evolved into the creation of candles that captivate the senses and elevate the ambiance of any space.">
     <meta name="About the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
-    <title>About Us | Illumina Scents & Sounds</title>
+    
 
     <link rel="preload" href="Stylesheets/index.css" as="style">
     <link rel="stylesheet" href="Stylesheets/index.css">
