--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
     <meta charset="UTF-8">
     <meta name="description" content="Contact us using the contact email if you have any queries.">
     <meta name="The contact section of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1">
