--- a/product_page.html
+++ b/product_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
         <meta charset="UTF-8">
         <meta name="description" content="Check out our various Illumina candles, each based around a specific mood with a matching spotify playlist.">
         <meta name="All the products of the Illumina Scents & Sounds company." content="width=device-width, initial-scale=1.0">
