--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/webp" href="Images/new_logo_title.webp">
     <meta charset="UTF-8">
+    <title>Menu Section | Illumina Scents & Sounds </title>
     <meta name="Navigation section to access other sections of the Illumina Scents & Sounds website." content="width=device-width, initial-scale=1">
 
     <link rel="preload" href="Stylesheets/menu_style.css" as="style">
     <link rel="stylesheet" href="Stylesheets/menu_style.css">
-    <title>Menu Section | Illumina Scents & Sounds </title>
+    
 </head>
 <body>
     <header id="mainHeader">
