changes to pictures & text

--- a/about_us.html
+++ b/about_us.html
@@ -57,11 +57,11 @@
 
         <div class="about_grid_container">
             <div class="grid-item grid-item-1">
-                <img src="Images/meeting.webp" alt="Image of a company meeting" loading="lazy" fetchpriority="low">
+                <img src="Images/spitalfields_stall.jpeg" alt="Image of the company's stall in the Spitalfields fair" loading="lazy" fetchpriority="low">
             </div>
 
             <div class="grid-item grid-item-2">
-                <img src="Images/mediamanager.webp" alt="Image of both the media manager and the CEO" loading="lazy" fetchpriority="low">
+                <img src="Images/greenwhich_market.jpg" alt="Image of Illumina Scents & Sounds at greenwhich market." loading="lazy" fetchpriority="low">
             </div>
 
             <div class="grid-item grid-item-3">
@@ -73,7 +73,7 @@
             </div>
 
             <div class="grid-item grid-item-5">
-                <img src="Images/all_candles.jpg" alt="Image of all the Illumina Scents & Sounds products" loading="lazy" fetchpriority="low">
+                <img src="Images/spitalfield_market.jpeg" alt="Image of Splitalfields market" loading="lazy" fetchpriority="low">
             </div>
         </div>
 
