--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         </p>
 
                         <p class="mainText" id="environmentText">
-                            Our candles are crafted with eco-friendly practices, using responsibly sourced materials. We believe in leaving a 
-                            positive impact on the environment, so you can enjoy our candles with the peace of mind that comes from supporting a brand that cares.
+                            Additionally, our candle jars are thoughtfully designed for reusability, allowing them to be repurposed for various uses, such as serving as stylish plant pots for your home. However, if re-using is not your thing, you can return your used jars to us in exchange
+                            for £2 off your next candle!
                         </p>
                         
                     </section>
